# dagster-test

./: .gitignore  README.md  dagster.yaml  pyproject.toml  setup.cfg  setup.py
dagster_test/: __init__.py  assets.py
